# wallets_api

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
api/: authentications.py  permissions.py  service.py  urls.py
api/serializers/: transaction.py  validations.py  wallet.py
api/views/: wallet.py
core/: celery.py  config.py  constants.py
core/django_conf/: asgi.py  settings.py  wsgi.py
services/: tasks.py  utils.py
tests/: locustfile.py
tests/wallet/: conftest.py  test_data.py  test_wallet.py
user/: admin.py  models.py
user/migrations/: 0001_initial.py
wallet/: admin.py  apps.py  models.py  signals.py
wallet/migrations/: 0001_initial.py  0002_remove_wallet_operation_type.py  0003_alter_wallet_options.py  0004_alter_wallet_options_wallet_description.py  0005_alter_wallet_options.py  0006_alter_wallet_options.py  0007_alter_wallet_options.py  0008_alter_wallet_balance.py  0009_alter_wallet_balance.py
